--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,10 @@
             appearance: button;
             text-decoration: none;
         }
+
+        .pb-100 {
+            padding-bottom: 100px;
+        }
     </style>
     {% include 'snippets/common_scripts.html' %}
 </head>
