--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
                 Are you sure you want to reset the word difficulties?
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 <form class="d-flex" action="{{url_for('WordView:reset_word_difficulties')}}">
                     <button type="submit" class="btn btn-danger">Reset</button>
                 </form>
