--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
         <div class="p-3 card shadow">
             <h5 class="mb-3">Study:</h5>
             {% if not types %}
-            <span>No words</span>
-            {% else %}
+            <div class="pb-2">No words</div>
+            {% endif %}
             <form action="{{url_for('WordView:get_word')}}" id="shuffle-study">
                 <div class="input-group mb-1 shadow-sm">
                     <input type="hidden" name="shuffle_words" value="" />
@@ -35,7 +35,7 @@
             <button onclick='$("#reset-modal").modal("show");' class="form-control btn-lg  btn btn-outline-dark mb-1"><i class="fas fa-info"></i>&nbsp;&nbsp;Reset
                 difficulties</button>
 
-            {% endif %}
+            
             {% for type in types %}
             <div>
                 <div class="input-group mt-2 shadow">
