add 3 diff - medium

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,9 +18,10 @@
                     <input type="hidden" name="shuffle_study" value="" />
                     <input type="hidden" name="difficulty" value="" />
                     <select class="form-select" id="difficulty-select">
-                        <option selected value="1">Learning</option>
-                        <option value="0">Learned</option>
-                        <option value="2">All</option>
+                        <option selected value="2">Hard</option>
+                        <option value="1">Medium</option>
+                        <option value="0">Easy</option>
+                        <option value="3">All</option>
                     </select>
                     <button onclick="shuffleStudy()" class="btn-lg btn btn-outline-dark"><i
                             class="fas fa-random"></i>&nbsp;&nbsp;Study</button>
