--- a/templates/word.html
+++ b/templates/word.html
@@ -210,7 +210,7 @@
         document.onkeydown = (e) => {
 
             var code = e.key;
-            console.log(code)
+            // console.log(code)
             switch (code) {
                 case "ArrowLeft": // left
                     $("#prev-word").click();
