--- a/templates/word.html
+++ b/templates/word.html
@@ -227,7 +227,10 @@
                 case "d":
                     $("#hard-radio").click();
                     break;
-                case "ArrowDown" || "ArrowUp":
+                case "ArrowDown":
+                    $("#word-card-open-button").click();
+                    break;
+                case "ArrowUp":
                     $("#word-card-open-button").click();
                     break;
             }
