font-size update

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,10 @@
         .pb-100 {
             padding-bottom: 100px;
         }
+
+        .word-section {
+            font-size: 18px;
+        }
     </style>
     {% include 'snippets/common_scripts.html' %}
 </head>
