--- a/templates/word.html
+++ b/templates/word.html
@@ -24,7 +24,7 @@
     <div class="row justify-content-md-center">
         <div class="col-sm-12 col-md-5 col-lg-5 p-3 pb-1 pt-1 bg-white">
 
-            <div onclick="$('#next-word').click();$(this).hide()" class="input-group {{word_dict['show_diff_selector']|hidden}}" >
+            <div id="select-diff" class="input-group {{word_dict['show_diff_selector']|hidden}}">
                 <div class="btn-group w-100 shadow-sm" role="group" aria-label="Basic radio toggle button group">
                     <input onclick="updateWordDifficulty(0)" type="radio" class="btn-check form-control"
                         name="diff_radio" id="easy-radio" value="0">
@@ -160,7 +160,8 @@
             <div class="modal-body">
                 <div class="mb-3 form-group">
                     <label for="go-to-word" class="mb-1">Word index:</label>
-                    <input type="number" min="1" max="5" class="form-control" id="go-to-word" value="{{current_index}}" autofocus>
+                    <input type="number" min="1" max="5" class="form-control" id="go-to-word" value="{{current_index}}"
+                        autofocus>
                 </div>
             </div>
             <div class="modal-footer">
@@ -251,6 +252,11 @@
 
         $.ajax({
             url: `{{url_for('WordView:update_difficulty')}}`,
+            success: (data) => {
+                console.log(data)
+                $("#next-word").click();
+                $("#select-diff").hide();
+            },
             beforeSend: (xhr) => {
                 xhr.setRequestHeader("X-CSRFToken", csrftoken)
             },
