--- a/templates/snippets/type_selector.html
+++ b/templates/snippets/type_selector.html
@@ -8,4 +8,5 @@
     <option value="phrase">Phrase</option>
     <option value="preposition">Preposition</option>
     <option value="pronoun">Pronoun</option>
+    <option value="conjunction">Conjunction</option>
 </select>
