--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -29,5 +29,14 @@
     <button onclick="location.href=`{{url_for('AuthView:register_auth')}}`" class="btn-lg shadow-sm btn btn-outline-dark mt-1 w-100"><i class="fas fa-user-plus"></i>&nbsp;&nbsp;Register</button>
   </div>
 </div>
+
+<!-- <div class="row justify-content-md-center p-2">
+  <div class="col-md-6">
+  
+  </div>
+  <div class="col-md-6">
+    {% include 'snippets/screenshots.html' %}
+  </div>
+</div> -->
 </div>
 {% endblock %}
