word count for shuffle session

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,12 @@
         .word-section {
             font-size: 18px;
         }
+
+        .word-count-input {
+            width: 75px;
+            text-align:center;
+            border: 1px solid #ced4da;
+        }
     </style>
     {% include 'snippets/common_scripts.html' %}
 </head>
