--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,7 @@
                         <option value="0">Easy</option>
                         <option value="3">All</option>
                     </select>
+                    <input class="word-count-input" type="number" min="1" max="10000" placeholder="#" class="form-control" name="word_count" value="10">
                     <button onclick="shuffleStudy()" class="btn-lg btn btn-outline-dark"><i
                             class="fas fa-random"></i>&nbsp;&nbsp;Study</button>
                 </div>
